# cleanNEAT

./: .gitignore  CMakeLists.txt  avsneatstartgenes  info.txt  testgenome
include/: avsExperiment.h  experiments.h  neatIO.h
src/: avsExperiment.cpp  genome.cpp  neatIO.cpp  neatmain.cpp
